--- a/taigenteikoku/src/index.html
+++ b/taigenteikoku/src/index.html
@@ -61,6 +61,27 @@
         }
     </style>
     <title>体現帝国館</title>
+    <!-- SEO / SNS share -->
+    <!-- Primary meta -->
+    <meta name="title" content="体現帝国館 | 体現帝国の劇場">
+    <meta name="description" content="舞台芸術を、内田橋から世界へ。24時間使える劇団［体現帝国］の専用劇場。地域と共に歩み、社会に必要とされる芸術を創造していきます。">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="体現帝国館">
+    <meta property="og:title" content="体現帝国館 | 名古屋・内田橋の劇場">
+    <meta property="og:description" content="舞台芸術を、内田橋から世界へ。24時間使える劇団［体現帝国］の専用劇場。">
+    <meta property="og:url" content="https://aimai-fuji.pya.jp/taigenteikokukan/">
+    <meta property="og:image" content="https://aimai-fuji.pya.jp/image/taigenteikokukan_logo.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="体現帝国館 | 名古屋・内田橋の劇場">
+    <meta name="twitter:description" content="舞台芸術を、内田橋から世界へ。体現帝国の専用劇場『体現帝国館』。">
+    <meta name="twitter:image" content="https://aimai-fuji.pya.jp/image/taigenteikokukan_logo.png">
+
     <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
     <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
 </head>
