PDF追加、文言変更

--- a/taigenteikoku/src/index.html
+++ b/taigenteikoku/src/index.html
@@ -282,7 +282,6 @@
                 <h3 class="text-center justify-start text-xl font-bold tracking-widest">
                     利用条件</h3>
                 <ul class='pl-6 leading-8 tracking-widest list-["-"]'>
-                    <li>使用時間の前後15分は入退室が可能です。</li>
                     <li>広さ：幅5m × 奥行9m × 高さ4.4m</li>
                     <li>想定用途：演劇練習／ダンス練習／音楽練習／写真撮影／美術製作 など</li>
                 </ul>
@@ -341,7 +340,7 @@
                 <p class="justify-start leading-8 tracking-widest">
                     利用を希望される方は、下記フォームまでご連絡ください。</p>
                 <div class="md:mx-[auto] ml-[auto]">
-                    <a href="#" target="_blank">
+                    <a href="https://forms.gle/ttgZX8Ti4XAXqRL86" target="_blank">
                         <div class="arraw group relative p-[5px] pr-[14px]">
                             <p class="justify-start leading-8 tracking-widest">
                                 レンタルを申し込む</p>
@@ -365,9 +364,9 @@
         </h2>
         <div class="w-full max-w-[800px] flex flex-col justify-start gap-14 fade-right">
             <div class="self-stretch justify-start leading-8 tracking-widest">
-                <p>体現帝国館は貸館営業を行っておりません。</p>
-                <p>御利用を希望の場合は、申し込みフォームより応募いただき審査を通過した方のみ体現帝国との共催事業として利用いただけます。</p>
-                <p>舞台上演に限らず、音楽イベントやワークショップ、展示等での御利用も可能です。</p>
+                <p>体現帝国館は上演利用に制限を設けています。</p>
+                <p>上演を希望の場合は、申し込みフォームより応募いただき審査を通過した方のみ体現帝国との共催事業として利用いただけます。</p>
+                <p>舞台上演に限らず、音楽イベントやワークショップ、美術展示等での御利用も可能です。</p>
                 <p>度肝を抜く企画を持ち込みください。</p>
             </div>
             <div class="flex flex-col justify-start items-center gap-7">
@@ -424,12 +423,12 @@
                 <h3 class="text-center justify-start text-xl font-bold tracking-widest">
                     お申し込み </h3>
                 <p class="justify-start leading-8 tracking-widest">
-                    体現帝国館での上演や展示を希望される方は、以下のフォームよりお申し込みください。 </p>
+                    体現帝国館での企画開催を希望される方は、以下のフォームよりお申し込みください。</p>
                 <div class="md:mx-[auto] ml-[auto]">
                     <a href="#" target="_blank">
                         <div class="arraw group relative p-[5px] pr-[14px]">
                             <p class="justify-start leading-8 tracking-widest">
-                                上演・展示利用を申し込む</p>
+                                共催企画を申し込む</p>
                             <span
                                 class="absolute inset-0 bg-[url(image/use_arraw.svg)] bg-no-repeat bg-contain bg-bottom transition-transform duration-300 group-hover:translate-x-2">
                             </span>
@@ -455,7 +454,7 @@
         </div>
         <div class="w-full flex flex-col justify-center items-center">
             <div id="msgCard"
-                class="self-stretch p-7 bg-white/40 shadow-[4px_4px_8px_0px_rgba(0,0,0,0.4)] outline outline-2 outline-offset-[-2px] outline-gray-950 flex flex-col gap-4 overflow-hidden transition-all duration-300 w-[340px] mx-auto">
+                class="self-stretch p-7 bg-white/40 shadow-[4px_4px_8px_0px_rgba(0,0,0,0.4)] outline outline-2 outline-offset-[-2px] outline-gray-950 flex flex-col gap-4 content-between overflow-hidden transition-all duration-300 w-[340px] mx-auto">
 
                 <button id="msgToggle"
                     class="w-full flex justify-between items-center text-left text-xl font-bold tracking-widest select-none cursor-pointer">
@@ -466,7 +465,13 @@
                 <div id="msgBody"
                     class="hidden opacity-0 translate-y-[-4px] transition-all duration-300 leading-8 tracking-widest"
                     style="transition: width 0.25s ease, height 0.35s ease;">
-                    ここにメッセージを表示ここにメッセージを表示ここにメッセージを表示ここにメッセージを表示ここにメッセージを表示ここにメッセージを表示
+                    体現帝国館は、劇団［体現帝国］が自らの手でつくり上げた劇場です。<br>
+                    私たちが私たち自身のために投資し、舞台芸術を最大限に追求できるよう設計しました。<br>
+                    この魅力ある空間を私たちだけのものにせず、多くの方々が「芸術を追求する場」として最大限使ってほしいと考えています。<br>
+                    そこで生まれる表現と、その売上をもとに劇場環境をさらに充実させ、利用者へ還元していきます。<br>
+                    その循環によって、体現帝国館を震源地に人類の持つ芸術表現の可能性をより広く深く押し広げていきます。<br>
+                    体現帝国館で、あなたを待っています。
+                    <img src="./image/watabe_sign.png" alt="渡部剛己" class="mt-6 ml-auto w-[240px] opacity-80 no-scatter">
                 </div>
             </div>
         </div>
@@ -481,15 +486,15 @@
             <img src="./image/document.svg" alt="各種資料" loading="lazy">
         </h2>
         <ul class='leading-8 tracking-widest list-none'>
-            <a href="#">
-                <li class="flex items-center gap-2 mb-4">-各種図面 <img class="w-4 h-4" src="./image/pdf.webp"
+            <a href="./pdf/体現帝国館_劇場図面.pdf" target="_blank">
+                <li class="flex items-center gap-2 mb-4">-劇場図面 <img class="w-4 h-4" src="./image/pdf.webp"
                         loading="lazy" /></li>
             </a>
             <a href="#">
                 <li class="flex items-center gap-2 mb-4">-設備資料 <img class="w-4 h-4" src="./image/pdf.webp"
                         loading="lazy" /></li>
             </a>
-            <a href="#">
+            <a href="./pdf/体現帝国LOGO類.pdf" target="_blank">
                 <li class="flex items-center gap-2 mb-4">-ロゴ類 <img class="w-4 h-4" src="./image/pdf.webp"
                         loading="lazy" /></li>
             </a>
@@ -525,13 +530,13 @@
                 <div class="flex flex-col gap-3 text-gray-100 tracking-widest w-full md:w-auto">
                     <h4 class="underline text-xl">各種資料</h4>
                     <ul class='pl-6 leading-8 tracking-widest list-["-"]'>
-                        <a href="#">
-                            <li>各種図面</li>
+                        <a href="./pdf/体現帝国館_劇場図面.pdf" target="_blank">
+                            <li>劇場図面</li>
                         </a>
                         <a href="#">
                             <li>設備資料</li>
                         </a>
-                        <a href="#">
+                        <a href="./pdf/体現帝国LOGO類.pdf" target="_blank">
                             <li>ロゴ類</li>
                         </a>
                         <a href="#">
@@ -903,7 +908,7 @@
 
         gsap.utils.toArray(".scatter-zone").forEach(section => {
             const items = section.querySelectorAll(
-                "p, li, dt, dd, h3, img, h2, th, td, #msgCard,.arraw"
+                "p, li, dt, dd, h3, img:not(.no-scatter), h2, th, td, #msgCard,.arraw"
             );
             items.forEach(item => {
                 gsap.set(item, { willChange: "transform, opacity" });
